# evocosm

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  cleanup  configure.ac  evocosm.pc.in
evocosm/: Makefile.am  analyzer.h  command_line.cpp  command_line.h  evocommon.cpp  evocommon.h  evocosm.h  evoreal.cpp  evoreal.h  function_optimizer.cpp  function_optimizer.h  fuzzy_machine.h  landscape.h  libevocosm.la  listener.h  machine_tools.h  mutator.h  organism.h  reproducer.h  roulette.cpp  roulette.h  scaler.h  selector.h  simple_machine.h  state_machine.h  stats.h  validator.h
examples/fopt/: Makefile.am  fopt.cpp
examples/fopt/.deps/: fopt.Po
examples/fopt/.libs/: fopt
examples/pdsm/: Makefile.am  pdsm.cpp
examples/pdsm/.deps/: command_line.Po  pdsm.Po
examples/pdsm/.libs/: lt-pdsm  pdsm
